# eink-infopanel

./: .gitignore  README.md
docs/: frame-format.md
esp-controller/: platformio.ini  reset.py
esp-controller/src/: main.cpp  secrets.h.example
server/: config.example.toml  pyproject.toml  wsgi.py
server/assets/icons/: README.md
server/dashboard/: __init__.py  api.py  config.py  encoding.py  models.py  service.py  telemetry.py  wakeup.py
server/dashboard/data/: __init__.py  caldav.py  chmi.py  chmi_daily.py  ical.py  placeholder.py  suntimes.py  victoriametrics.py
server/dashboard/rendering/: __init__.py  canvas.py  fonts.py  icons.py  l10n.py  primitives.py  theme.py
server/dashboard/rendering/sections/: __init__.py  calendar.py  daily.py  footer.py  forecast.py  header.py  summary.py
server/deploy/openrc/: dashboard  dashboard.confd
server/grafana/: esp-telemetry.json
server/tests/: test_chmi_daily.py  test_telemetry.py  test_wakeup.py
server/tools/: icon_mapping_page.py
